# timetree

./: Cargo.toml  LICENSE  README.md  cspell.json  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: bump.yml  cspell.yml  node.js.yml  tauri.yaml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml
apps/web/: client.ts  next.config.js  package.json
timetree-sdk-rs/: Cargo.toml
timetree-sdk-rs/src/: main.rs
